deps/chakrashim/core/test/strict/bug212755.baseline
SyntaxError: 'with' statements are not allowed in strict mode
	at code (bug212755.js:21:9)
